[tool.poetry]
name = "repl_python3_beta_Dot-Discord"
version = "0.1.0"
description = ""
authors = ["chinmaypant21 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
